--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
   id 'application'
   id 'org.openjfx.javafxplugin' version '0.1.0'
   id 'org.beryx.jlink' version '2.26.0'
+//  id 'org.fxmisc.richtext' version '0.11.2'
 }
 
 def logbackVersion = "1.4.11"
@@ -23,6 +24,7 @@ application {
 dependencies {
     implementation "ch.qos.logback:logback-classic:$logbackVersion"
     implementation "ch.qos.logback:logback-core:$logbackVersion"
+    implementation 'org.fxmisc.richtext:richtextfx:0.11.2'
 }
 
 jlink {
