--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
   id 'application'
   id 'org.openjfx.javafxplugin' version '0.1.0'
   id 'org.beryx.jlink' version '2.26.0'
-//  id 'org.fxmisc.richtext' version '0.11.2'
 }
 
 def logbackVersion = "1.4.11"
@@ -24,12 +23,19 @@ application {
 dependencies {
     implementation "ch.qos.logback:logback-classic:$logbackVersion"
     implementation "ch.qos.logback:logback-core:$logbackVersion"
-    implementation 'org.fxmisc.richtext:richtextfx:0.11.2'
+    implementation "org.fxmisc.richtext:richtextfx:0.11.2"
+    implementation "com.dlsc.preferencesfx:preferencesfx-core:11.17.0"
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
 
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--bind-services']
     launcher {
         name = 'MyApplication'
+    }
+}
+jar{
+    manifest {
+        attributes 'Main-Class': application.mainClass
     }
 }
